tests/error/modifier_errors/dagger_loop.py
from guppylang.decorator import guppy


@guppy
def test() -> None:
    with dagger:
        for _ in range(46):
            pass


test.compile()
